--- a/style.css
+++ b/style.css
@@ -142,21 +142,47 @@ body {
     position: relative;
     background: linear-gradient(to right, #6b46c1, #4c288b, #2d2a36);
     color: white;
-    padding-top: 6rem; 
-    padding-bottom: 6rem; 
+    overflow: hidden;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
 }
 
+.hero:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('images/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg');
+    background-size: cover;
+    background-position: center;
+    opacity: 0.3;
+    z-index: -1;
+}
+
+.hero .text-section {
+    z-index: 1;
+}
+
+.hero h1 {
+    margin-top: 0;
+    margin-bottom: 1.5rem; 
+}
+
+.hero p {
+    margin-top: 0; 
+    margin-bottom: 1.5rem; 
+}
 
 .image-section img {
     max-height: 400px;
     object-fit: cover;
 }
 
-
 .image-section img:hover {
     transform: scale(1.05);
 }
-
 
 .btn-hero {
     background-color: #9333ea;
@@ -168,6 +194,30 @@ body {
     transform: translateY(-3px); 
     box-shadow: 0 6px 16px 0 rgba(147, 51, 234, 0.6);
 }
+
+.btn-download {
+    background-color: #38a169;
+    box-shadow: 0 4px 14px 0 rgba(56, 161, 105, 0.4);
+}
+
+.btn-download:hover {
+    background-color: #2f855a;
+    transform: translateY(-3px); /* Lekki efekt podniesienia */
+    box-shadow: 0 6px 16px 0 rgba(56, 161, 105, 0.6);
+}
+
+
+#features h2 {
+    margin-top: 0; 
+    margin-bottom: 2rem; 
+}
+
+#features h3 {
+    margin-top: 1.5rem; 
+}
+
+
+
 
 @keyframes pulse {
     0%, 100% {
